[FIX] fix z-index in notification center

--- a/src/widgets/NotificationCenter/ui/NotificationsDropdown/NotificationsDropdown.module.scss
+++ b/src/widgets/NotificationCenter/ui/NotificationsDropdown/NotificationsDropdown.module.scss
@@ -19,6 +19,7 @@
 .show {
     pointer-events: auto;
     opacity: 1;
+    z-index: 1;
     transition: opacity .5s;
 }
 
